--- a/client/src/Components/css/navbar.css
+++ b/client/src/Components/css/navbar.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   right: 0;
-  height: 10%;
+  height: 5rem;
   width: 100%;
   z-index: 1;
   background-color: #444444;
