--- a/client/src/Components/css/itemdisplayfocused.css
+++ b/client/src/Components/css/itemdisplayfocused.css
@@ -12,9 +12,9 @@
 
 @keyframes moveUp {
   0% {
-    transform: translateY(calc(100vh));
+    transform: translateY(100vh);
   } 100% {
-    transform: translateY((0));
+    transform: translateY((10vh));
   }
 }
 
@@ -28,7 +28,7 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 #viewitem--item {
@@ -50,11 +50,10 @@
 
 #viewitem--block-document {
   position: absolute;
-  padding-top: 5vw;
-  z-index: 1;
+  z-index: 2;
   background-color: #101010fe;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   height: max-content;
   animation: moveUp forwards linear 600ms;
 }
@@ -63,12 +62,30 @@
   position: fixed;
   top: 1rem;
   right: 1rem;
-  width: 5vw;
-  height: 5vw;
+  width: 4rem;
+  height: 4rem;
   font-size: 3rem;
-  color: yellow;
+  color: white;
   background-color: #00000000;
   cursor: pointer;
   border-radius: 50%;
-  border: 3px solid yellow;
+  border: 3px solid white;
+  font-family:Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  z-index: 3;
+}
+
+#viewitem--filename {
+  position: absolute;
+  top: 0;
+  font-size: 3rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  cursor: default;
+  background-color: #383844;
+  z-index: 2;
+  height: 6rem;
 }
