--- a/client/src/Components/css/navbar.css
+++ b/client/src/Components/css/navbar.css
@@ -23,6 +23,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: Lato;
+  font-size: 1.5rem;
 }
 
 #navbar--back:hover {
@@ -38,6 +40,7 @@
   border: 2px solid #666;
   cursor: default;
 }
+
 #navbar--current-directory {
   font-size: 2rem;
   color: white;
