--- a/client/src/Components/css/renderfiles.css
+++ b/client/src/Components/css/renderfiles.css
@@ -1,9 +1,9 @@
 #renderfile--page {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: calc((var(--screen-width) / 6));
+  grid-gap: 1rem;
+  margin-top: 1rem;
 }
 
 .renderfile--block {
@@ -12,35 +12,32 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 25vw;
-  width: 21vw;
-  margin: 0.5vw;
+  min-width: 100%;
+  min-height: 100%;
   background-color: #444444;
   border-radius: 0.3rem;
-  padding: 0 1vw;
   text-align: center;
 }
 
 #renderfile--corner-icon {
-  width: 17%;
-  height: 17%;
+  height: 4vw;
+  max-height: 5rem;
   position: absolute;
-  top: 0.3rem;
-  right: 0.3rem;
+  top: 2%;
+  left: 2%;
 }
 
 #renderfile--image-thumbnail, #renderfile--video-thumbnail {
-  max-height: 80%;
-  max-width: 80%;
+  max-height: 90%;
+  max-width: 90%;
   position: absolute;
-
 }
 
 .renderfile--text {
+  overflow: hidden;
   text-overflow: ellipsis;
   position: absolute;
   bottom: 2%;
-  max-height: 100%;
   color: white;
   background-color: black;
   padding: 1%;
@@ -68,6 +65,50 @@
 }
 
 .renderfile--full-icon {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 80%;
+  max-height: 80%;
+  margin-bottom: 5%;
+}
+
+
+@media screen and (max-width: 2000px) {
+  #renderfile--page {
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 4.8));
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  #renderfile--page {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 3.8));
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  #renderfile--page {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 2.8));
+  }
+}
+@media screen and (max-width: 900px) {
+  #renderfile--page {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 1.8));
+  }
+  #renderfile--corner-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #renderfile--page {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: calc(var(--screen-width)/ 0.8);
+  }
+  #renderfile--corner-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
 }
