--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -7,14 +7,14 @@
   top: 0;
   z-index: 1;
   background-color: #444444;
-  height: 7rem;
+  height: 4rem;
 }
 
 #navbar--navigation {
   display: flex;
   flex-direction: row;
   position: absolute;
-  left: 5rem;
+  left: 6rem;
 }
 
 #navbar--navigation > * {
@@ -23,9 +23,7 @@
 
 .navbar--button {
   width: 3rem;
-  height: 2rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  height: 3rem;
   color: #000;
   background-color: #fff;
   border-radius: 5px;
@@ -34,20 +32,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: Lato;
+  font-family: 'bebas neue';
+  border-radius: 3px;
 }
 
 .navbar--button:hover {
   color: white;
   background-color: black;
-  border: 2px solid white;
-  cursor: pointer;
+  border: 1.5px solid white;
 }
 
 .navbar--button:disabled {
-  background-color: #888888;
-  color: #444444;
-  border: 2px solid #666;
+  background-color: #444;
+  border: 1.5px solid #222;
+  color: #222;
   cursor: default;
 }
 
