--- a/client/src/Components/Rendering/renderfiles.css
+++ b/client/src/Components/Rendering/renderfiles.css
@@ -1,7 +1,7 @@
 #renderfile--page {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: calc((var(--screen-width) / 6));
+  grid-template-columns: repeat(8, 1fr);
+  grid-auto-rows: calc((var(--screen-width) / 8));
   grid-gap: 1rem;
   margin-top: 1rem;
 }
@@ -20,7 +20,7 @@
 }
 
 #renderfile--corner-icon {
-  height: 4vw;
+  height: 10%;
   max-height: 5rem;
   position: absolute;
   top: 2%;
@@ -73,28 +73,28 @@
 
 @media screen and (max-width: 2000px) {
   #renderfile--page {
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 4.8));
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 5.8));
   }
 }
 
 @media screen and (max-width: 1600px) {
   #renderfile--page {
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 3.8));
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 4.8));
   }
 }
 
 @media screen and (max-width: 1300px) {
   #renderfile--page {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 2.8));
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 3.8));
   }
 }
 @media screen and (max-width: 900px) {
   #renderfile--page {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: calc((var(--screen-width) / 1.8));
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: calc((var(--screen-width) / 2.8));
   }
   #renderfile--corner-icon {
     width: 2.5rem;
@@ -102,10 +102,10 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   #renderfile--page {
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: calc(var(--screen-width)/ 0.8);
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: calc(var(--screen-width)/ 1.8);
   }
   #renderfile--corner-icon {
     width: 2.5rem;
