--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,10 @@
-* {
+*, *::before, *::after {
+  box-sizing: border-box;
   font: 1rem 'Times New Roman';
   margin: 0;
   padding: 0;
 }
+
 
 html,
 body {
