--- a/client/src/Components/ItemDisplay/display.css
+++ b/client/src/Components/ItemDisplay/display.css
@@ -1,11 +1,13 @@
 
 @keyframes focusImage {
   0% {
+      position: absolute;
       opacity: 0;
       transform: scale(40%);
   }
   100% {
       opacity: 1;
+      position: absolute;
       transform: scale(100%);
   }
 }
@@ -17,7 +19,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #0f0f0ff4;
+  background-color: #0f0f0ff9;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -30,6 +32,7 @@
   width: 100vw;
   max-width: 100%;
   max-height: 100%;
+  background-color: black;
 }
 
 .viewitem--item {
@@ -39,6 +42,21 @@
   animation: focusImage forwards ease-out 500ms;
   max-width: 96%;
   max-height: 96%;
+}
+
+#viewitem--block-document {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  background-color: #101010fe;
+  width: 100%;
+  min-height: 100%;
+  height: max-content;
+}
+
+#viewitem--video {
+  height: auto;
+  width: auto;
 }
 
 #viewitem--document {
@@ -57,35 +75,16 @@
   width: var(--screen-width);
 }
 
-#viewitem--block-document {
-  position: absolute;
-  top: 0;
-  z-index: 2;
-  background-color: #101010fe;
-  width: 100%;
-  min-height: 100%;
-  height: max-content;
-}
-
-
 .viewitem--close {
-  position: fixed;
+  position: absolute ;
   top: 1rem;
   right: 1rem;
-  width: 4rem;
-  height: 4rem;
+  width: 2rem;
+  height: 2rem;
   font-size: 3rem;
   color: white;
   background-color: #00000000;
   cursor: pointer;
-  border-radius: 50%;
-  border: 3px solid white;
-  font-family:'bebas neue';
+  border-radius: 5px;
   z-index: 1;
-}
-
-#viewitem--filename {
-  color: white;
-  cursor: default;
-  font-size: 2rem;
 }
