--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -6,7 +6,9 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: #444444;
+  background-color: black;
+  border-bottom: 2px solid white;
+  border-top: 2px solid white;
   height: 4rem;
 }
 
@@ -47,6 +49,14 @@
   border: 1.5px solid #222;
   color: #222;
   cursor: default;
+}
+
+#reload--icon {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.4rem;
+  right: 1rem;
 }
 
 @media screen and (max-width: 768px) {
