--- a/client/src/Components/Rendering/renderfiles.css
+++ b/client/src/Components/Rendering/renderfiles.css
@@ -34,29 +34,28 @@
 }
 
 .renderfile--text {
-  overflow: hidden;
-  text-overflow: ellipsis;
   position: absolute;
   bottom: 2%;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
   padding: 1%;
-  border: 1.5px solid white;
-  border-radius: 0.8rem;
+  border: 1.5px solid black;
+  border-radius: 3px;
   width: 95%;
   font-family: Bitter;
   font-size: 90%;
 }
 
 .renderfile--text:hover {
-  color: #000;
-  background-color: #fff;
-  bottom: 1.5px solid black;
+  color: white;
+  background-color: black;
+  border: 1.5px solid white;
 }
 
 .renderfile--block:hover {
   cursor: pointer;
-  background-color: #333333;
+  background-color: #111;
+  border: 1.5px solid white;
 }
 
 #renderfile--play-icon {
