More stuff added

--- a/client/src/Components/Navbar/DirectoryManagement/DirectoryTree/directorytree.css
+++ b/client/src/Components/Navbar/DirectoryManagement/DirectoryTree/directorytree.css
@@ -21,99 +21,84 @@
   z-index: 1;
   cursor: default;
   height: calc(var(--screen-height) - 4rem);
-  width: calc(100vw / 3);
+  width: 35vw;
   background-color: #111;
   position: fixed;
   left: -5px;
   top: 4rem;
   overflow-y: scroll;
+  overflow-x: scroll;
   padding-right: 5px;
-  scrollbar-color: rebeccapurple #4444;
-  scrollbar-width: thin;
 }
 
-#directorytree--body::-webkit-scrollbar {
-  width: 10px;
-}
-
-#directorytree--body::-webkit-scrollbar-track {
-  background: gainsboro;
-  border-radius: 5px;
-}
-
-#directorytree--body::-webkit-scrollbar-thumb {
-  background: black;
-  border-radius: 5px;
-}
-
-#directorytree--body::-webkit-scrollbar-thumb:hover {
-  background: rebeccapurple;
-}
-
-.directorytree-parent-down {
-  height: 1.5rem;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.directorytree--parent-directory {
-  margin-top: 1rem;
-  background-color: white;
-  border-radius: 5px;
-  color: black;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 1.8rem;
-  font-size: 1.2rem;
-  font-weight: bold;
-  letter-spacing: -0.2px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-family: 'roboto slab';
-}
-
-.directorytree--expanded-directory {
+.tree--expanded-chunk {
   position: relative;
-  margin-top: 1rem;
+  width: 100%;
 }
 
 .line--down {
   position: absolute;
-  margin-top: 2.7rem;
+  margin-top: 2rem;
   left: 0;
   top: 0;
-  height: calc(100% - 2.5rem);
+  height: calc(100% - 2rem);
   background-color: #fff;
   width: 1px;
 }
 
-.directorytree--directory {
-  margin-top: 5px;
-  background-color: #000;
-  color: white;
-  height: 1.5rem;
-  border-radius: 5px;
+.folder--icon {
+  width: 1.3rem;
+  margin-right: 5px;
+}
+
+.tree--open-directory, .tree--closed-directory {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   padding-left: 5px;
+  height: 1.5rem;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-top: 5px;
   font-family: 'roboto slab';
 }
 
-.directorytree--directory:hover {
-  background-color: #fff;
-  color: #000;
-  animation: hoverDirs 100ms forwards ease-out;
+.tree--open-directory {
+  background-color: #888;
+  color: black;
+  font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: -0.2px;
+  border-radius: 3px 0.7rem 3px 0.7rem;
 }
 
-@media screen and (max-width: 768px) {
-  #directorytree--button-showhide  {
-    position: absolute;
-    top: 1rem;
-  }
-  #directorytree--body {
-    top: 5rem;
-  }
+.tree--closed-directory {
+  border-radius: 3px;
+  background-color: #222;
+  color: white;
+}
+
+.tree--arrow {
+  height: 1.2rem;
+  margin-left: 2px;
+  margin-right: 5px;
+  cursor: default;
+}
+
+#highlight--child {
+  background-color: #abcdef;
+}
+
+#highlight--parent {
+  background-color: #fe8cba;
+}
+
+.tree--closed-directory:hover, .tree--open-directory:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  border: 1.5px solid white;
+  animation: hoverDirs 100ms forwards ease-out;
 }
