--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: black;
+  background-color: #111;
   border-bottom: 2px solid white;
   border-top: 2px solid white;
   height: 4rem;
