--- a/client/src/Components/ItemDisplay/display.css
+++ b/client/src/Components/ItemDisplay/display.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  z-index: 2;
+  z-index: 7;
 }
 
 #image-fullscreen {
@@ -42,6 +42,22 @@
   animation: focusImage forwards ease-out 500ms;
   max-width: 96%;
   max-height: 96%;
+}
+
+#button--forwards, #button--backwards {
+  position: absolute;
+  z-index: 1;
+  height: 3rem;
+  cursor: pointer;
+  top: calc(50vh - 1.5rem);
+}
+
+#button--forwards {
+  right: 1rem;
+}
+
+#button--backwards {
+  left: 1rem;
 }
 
 #viewitem--block-document {
