--- a/client/src/Components/ItemDisplay/display.css
+++ b/client/src/Components/ItemDisplay/display.css
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100vh;
   top: 0;
-  z-index: 7;
+  z-index: 50;
 }
 
 #image-fullscreen {
@@ -63,11 +63,9 @@
 #viewitem--block-document {
   position: absolute;
   top: 0;
-  z-index: 2;
   background-color: #101010fe;
   width: 100%;
   min-height: 100%;
-  height: max-content;
 }
 
 #viewitem--video {
@@ -76,6 +74,7 @@
 }
 
 #viewitem--document {
+  top: 3rem;
   text-align: left;
   font-size: 1.5rem;
   color: white;
@@ -95,12 +94,17 @@
   position: absolute ;
   top: 1rem;
   right: 1rem;
-  width: 2rem;
-  height: 2rem;
-  font-size: 3rem;
-  color: white;
-  background-color: #00000000;
+  width: 2.5rem;
+  height: 2.5rem;
   cursor: pointer;
-  border-radius: 5px;
   z-index: 1;
+}
+
+#navigating--indicator {
+  cursor: default;
+  position: absolute;
+  top: 1rem;
+  height: 2rem;
+  color: yellow;
+  left: 1rem;
 }
