--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -5,7 +5,7 @@
   width: var(--screen-width);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   background-color: #111;
   border-bottom: 2px solid white;
   border-top: 2px solid white;
@@ -57,6 +57,22 @@
   height: 3rem;
   padding: 0.4rem;
   right: 1rem;
+}
+
+#navbar--current-directory-header {
+  background-color: yellowgreen;
+  position: sticky;
+  top: 4rem;
+  height: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  z-index: 10;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-family: 'Roboto Flex';
 }
 
 @media screen and (max-width: 768px) {
