--- a/client/src/Components/Rendering/renderfiles.css
+++ b/client/src/Components/Rendering/renderfiles.css
@@ -19,6 +19,12 @@
   text-align: center;
 }
 
+.renderfile--block:hover {
+  cursor: default;
+  background-color: #111;
+  border: 1.5px solid yellowgreen;
+}
+
 #renderfile--corner-icon {
   height: 10%;
   max-height: 5rem;
@@ -31,12 +37,15 @@
   max-height: 90%;
   max-width: 90%;
   position: absolute;
+  cursor: pointer;
 }
+
 #renderfile--image-thumbnail:hover {
   transform: scale(1.05);
   transition: 500ms;
-  z-index: 3;
+  z-index: 2;
 }
+
 .renderfile--text {
   position: absolute;
   bottom: 2%;
@@ -48,22 +57,15 @@
   width: 95%;
   font-family: Bitter;
   font-size: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .renderfile--text:hover {
   color: white;
   background-color: black;
   border: 1.5px solid white;
-}
-
-.renderfile--block:hover {
-  cursor: pointer;
-  background-color: #111;
-  border: 1.5px solid white;
-}
-
-#renderfile--video {
-  cursor: default;
 }
 
 #renderfile--play-icon {
