--- a/client/src/Components/Rendering/_renderfiles.scss
+++ b/client/src/Components/Rendering/_renderfiles.scss
@@ -1,3 +1,5 @@
+@import '../SCSS\ General/variables';
+
 #renderfile--page {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
@@ -8,12 +10,9 @@
 
 .renderfile--block {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-width: 100%;
-  min-height: 100%;
+  @include flexStyle(column);
+  width: 100%;
+  height: 100%;
   background-color: #444444;
   border-radius: 0.3rem;
   text-align: center;
@@ -22,7 +21,7 @@
 .renderfile--block:hover {
   cursor: default;
   background-color: #111;
-  border: 1.5px solid yellowgreen;
+  border: 1.5px solid $accentColor;
 }
 
 #renderfile--corner-icon {
@@ -49,7 +48,6 @@
 .renderfile--text {
   position: absolute;
   bottom: 2%;
-  color: black;
   background-color: white;
   padding: 1%;
   border: 1.5px solid black;
