--- a/client/src/Components/Navbar/Sorting/_sortby.scss
+++ b/client/src/Components/Navbar/Sorting/_sortby.scss
@@ -1,10 +1,10 @@
-@import '../../SCSS\ General/variables';
+@import "../../SCSS\ General/variables";
 
 #navbar--sort-button {
   @include navbarBtn;
   position: absolute;
   right: 5rem;
-  top: .4rem;
+  top: 0.4rem;
   z-index: 1;
   width: 5rem;
 }
@@ -17,11 +17,10 @@
   width: 20rem;
   margin: 0;
   border-radius: 1px;
-}
-
-#filter--list:hover {
-  color: #000;
-  border: 1.5px solid black;
+  &:hover {
+    color: #000;
+    border: 1.5px solid black;
+  }
 }
 
 .filter--list-item {
@@ -29,12 +28,11 @@
   width: 100%;
   height: 20%;
   @include flexStyle(column);
-  font-family: 'bebas neue';
+  font-family: "bebas neue";
   font-size: 1.5rem;
-}
-
-.filter--list-item:hover {
-  color: $accentColor;
+  &:hover {
+    color: $accentColor;
+  }
 }
 
 #filter--by-folder-first {
@@ -68,7 +66,7 @@
 #navbar--asc-desc {
   position: absolute;
   right: 10.2rem;
-  top: .4rem;
+  top: 0.4rem;
   padding: 3px;
   height: 3rem;
   font-size: 1.8rem;
@@ -77,29 +75,25 @@
 @media screen and (max-width: 768px) {
   #navbar--sort-button {
     width: 3rem;
-    margin: 0;
+    right: 2rem;
     top: 0;
+    font-size: 50%;
+    border: 1px solid black;
+
   }
   #filter--list {
-    width: 10rem;
+    margin-top: 1.8rem;
+    right: 8rem;
+    width: 50vw;
+    height: 50vh;
   }
-  #navbar--asc-or-desc {
-    position: absolute;
-    right: 3rem;
+  .filter--list-item {
+    height: 100%;
+    width: 50vw;
+  }
+  #navbar--asc-desc {
+    right: 4rem;
     top: 0;
-  }
-  #navbar--descending,
-  #navbar--ascending {
-    white-space: nowrap;
-    width: 3rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  #navbar--descending:disabled,
-  #navbar--ascending:disabled {
-    white-space: nowrap;
-    width: 3rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    font-size: 1rem;
   }
 }
