--- a/client/src/Components/SCSS General/_general.scss
+++ b/client/src/Components/SCSS General/_general.scss
@@ -11,6 +11,12 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 :root {
