--- a/client/src/Components/ItemDisplay/videocontrols.scss
+++ b/client/src/Components/ItemDisplay/videocontrols.scss
@@ -6,19 +6,43 @@
   height: 96%;
   width: 96%;
 }
-#video-controls-container {
-  background-color: #222222cd;
+
+#video-container:focus-within #video-header, #video-container:focus-within #video-controls-container {
+  transform: scaleY(1);
+}
+
+#video-header {
+  position: absolute;
+  top: 0;
   width: 100%;
+  height: 5%;
+  z-index: 1;
+  text-align: center;
+  background-color: #222222ee;
+  color: white;
+  font-family: akshar;
+  font-size: 2em;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 100ms ;
+}
+
+#video-controls-container {
+  background-color: #222222ee;
+  width: 100.1%;
   height: 25%;
   max-height: 8rem;
   position: absolute;
   bottom: 0;
   z-index: 1;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 100ms ;
 }
 
 #controls {
   position: absolute;
-  bottom: 20%;
+  bottom: 10%;
   width: 100%;
   @include flexStyle(row);
   justify-content: space-around;
@@ -27,7 +51,6 @@
 #play-pause,
 #mini-player,
 #playback-speed,
-#volume-control,
 #full-screen-control {
   height: 3rem;
   width: 3rem;
@@ -44,11 +67,60 @@
 #full-screen-control img {
   width: 100%;
   height: 100%;
+  opacity: 0.85;
   &:hover {
-   transform: scale(1.3);
-   transition: transform 100ms ease-out;
+    opacity: 1;
+   transform: scale(1.1);
+   transition: transform 100ms ease-out, opacity 100ms;
    cursor: pointer;
   }
+}
+
+#volume-container {
+  position: relative;
+}
+
+#volume-control {
+  background-color: #00000000;
+  outline: none;
+  border: none;
+}
+
+#volume-slider {
+  -webkit-appearance: none;
+  rotate: -90deg;
+  background-color: #222222ff;
+  position: absolute;
+  left: -75%;
+  top: -180%;
+  outline: none;
+  transform-origin: bottom;
+  transform: scaleX(0);
+  transition: width 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+#volume-container:hover #volume-slider, #volume-slider:focus-within {
+  transform: scaleX(1);
+  border: 5px solid white;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+
+#volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: darken($accentColor, 30%);
+  cursor: pointer;
+}
+
+#volume-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: darken($accentColor, 30%);
+  cursor: pointer;
 }
 
 #timeline-container {
@@ -67,14 +139,15 @@
 #duration-container {
   @include flexStyle(row);
   height: 3rem;
-  width: 6rem;
+  width: 12rem;
   max-width: 20%;
 }
 
-#duration-container p,
-#playback-speed {
+#duration-container text,
+#playback-speed text{
+  color: #fff;
   font-family: "bebas neue";
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 #volume-container {
